# claude-config-manager

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: site.yml  tauri.yml
docs/: API-REFERENCE.md  ARCHITECTURE.md  DEVELOPER-GUIDE.md  INDEX.md
scripts/: copy-demo-to-site.mjs
site/: .gitignore  package.json
site/src/components/: DownloadButtons.astro  Features.astro  Hero.astro  Nav.astro
site/src/pages/: index.astro
src/: App.tsx  env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/adapters/: agentAdapter.ts  catalogAdapter.ts  claudemdAdapter.ts  commandAdapter.ts  dialog.demo.ts  fs.demo.fixture.ts  fs.demo.ts  fs.ts  index.ts  memoryAdapter.ts  ruleAdapter.ts  skillAdapter.ts  skillsShScraper.ts
src/app/: store.ts  updater.ts
src/app/palette/: index.ts
src/app/shell/: Shell.tsx
src/data/: catalog.ts
src/engine/: collision.ts  index.ts
src/ontology/: catalog.ts  core.ts  index.ts  settings.ts
src/ui-descriptors/: catalog.tsx  index.ts  plugin.tsx
src/ui-primitives/: CommandPalette.tsx  ConfirmDialog.tsx  Field.tsx  SettingsDialog.tsx  index.ts
src/ui-primitives/markdown/: CodeBlock.tsx  MarkdownView.tsx  shiki.ts
