[package]
name = "ccm"
version = "0.5.0"
description = "Claude Code Manager"
edition = "2021"

[lib]
name = "ccm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
tokio = { version = "1", features = ["sync", "rt", "macros", "process", "time", "io-util"] }
dirs = "5"
ignore = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
